--- a/3_WebApp/templates/index.html
+++ b/3_WebApp/templates/index.html
@@ -235,25 +235,26 @@
       font-size: 16px;
     }
 
-    @keyframes slideInFromRight {
+    @keyframes slideInFromBottom {
       from {
-        transform: translateX(100%);
+        transform: translateY(100vh);
         opacity: 0;
       }
       to {
-        transform: translateX(0);
+        transform: translateY(0);
         opacity: 1;
       }
     }
 
-    .about_sec, .help-section {
-      animation: slideInFromRight 1.2s ease-out both;
+    .about_sec,.help-section {
+      animation: slideInFromBottom 1.5s ease-in-out;
     }
 
 
 
 
   </style>
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Iceland&family=Michroma&display=swap" rel="stylesheet">
